[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/stages/Stage32.gd" type="Script" id=1]
[ext_resource path="res://scenes/stages/extras/backgrounds/CloudsHD.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tilesets/Castle.xml" type="TileSet" id=3]
[ext_resource path="res://scenes/stages/extras/KillZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/hazzards/Spikes.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/monsters/Bobo.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/monsters/RocoSteel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/monsters/Gobo.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/monsters/Roco.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/coins/Coin.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/hazzards/FireballUp.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/hazzards/RotatingFire.tscn" type="PackedScene" id=13]

[node name="Stage32" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Clouds" parent="." instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 327675, 10, 327676, 10, 327677, 10, 393210, 15, 393211, 0, 393212, 0, 393213, 0, 393214, 0, 393215, 12, 327722, 15, 327723, 0, 327724, 0, 327725, 0, 327726, 0, 327727, 12, 458746, 3, 458747, 4, 458748, 4, 458749, 4, 458750, 4, 458751, 1, 393216, 5, 393219, 5, 393222, 5, 393225, 5, 393228, 5, 393231, 5, 393234, 5, 393237, 5, 393240, 5, 393243, 5, 393246, 5, 393249, 5, 393252, 5, 393255, 5, 393258, 3, 393259, 4, 393260, 4, 393261, 4, 393262, 4, 393263, 1, 524280, 6, 524282, 3, 524283, 4, 524284, 4, 524285, 4, 524286, 4, 524287, 1, 458794, 3, 458795, 4, 458796, 4, 458797, 4, 458798, 4, 458799, 1, 458801, 6, 589818, 14, 589819, 2, 589820, 2, 589821, 2, 589822, 2, 589823, 13, 524330, 14, 524331, 2, 524332, 2, 524333, 2, 524334, 2, 524335, 13, 655356, 11, 589868, 11, 589876, 6, 720886, 6, 851960, 6, 786482, 6, 851985, 9, 852000, 9, 983034, 15, 983035, 0, 983036, 0, 983037, 0, 983038, 0, 983039, 12, 917546, 15, 917547, 0, 917548, 0, 917549, 0, 917550, 0, 917551, 12, 1048570, 3, 1048571, 4, 1048572, 4, 1048573, 4, 1048574, 4, 1048575, 1, 983040, 5, 983043, 5, 983046, 5, 983049, 5, 983052, 5, 983055, 5, 983058, 5, 983061, 5, 983064, 5, 983067, 5, 983070, 5, 983073, 5, 983076, 5, 983079, 5, 983082, 3, 983083, 4, 983084, 4, 983085, 4, 983086, 4, 983087, 1, 1114103, 5, 1114106, 3, 1114107, 4, 1114108, 4, 1114109, 4, 1114110, 4, 1114111, 1, 1048618, 3, 1048619, 4, 1048620, 4, 1048621, 4, 1048622, 4, 1048623, 1, 1048624, 5, 1179642, 14, 1179643, 2, 1179644, 2, 1179645, 2, 1179646, 2, 1179647, 13, 1114154, 14, 1114155, 2, 1114156, 2, 1114157, 2, 1114158, 2, 1114159, 13, 1245180, 11, 1179692, 11, 1179701, 7, 1310708, 7, 1376306, 7, 1507318, 7, 1638394, 15, 1638395, 0, 1638396, 0, 1638397, 0, 1638398, 0, 1638399, 12, 1572868, 7, 1572874, 6, 1572880, 6, 1572884, 6, 1572891, 6, 1572897, 6, 1572902, 6, 1572906, 15, 1572907, 0, 1572908, 0, 1572909, 0, 1572910, 0, 1572911, 12, 1703930, 3, 1703931, 4, 1703932, 4, 1703933, 4, 1703934, 4, 1703935, 1, 1638400, 5, 1638403, 5, 1638406, 5, 1638409, 5, 1638412, 5, 1638415, 5, 1638418, 5, 1638421, 5, 1638424, 5, 1638427, 5, 1638430, 5, 1638433, 5, 1638436, 5, 1638439, 5, 1638442, 3, 1638443, 4, 1638444, 4, 1638445, 4, 1638446, 4, 1638447, 1, 1769464, 6, 1769466, 3, 1769467, 4, 1769468, 4, 1769469, 4, 1769470, 4, 1769471, 1, 1703978, 3, 1703979, 4, 1703980, 4, 1703981, 4, 1703982, 4, 1703983, 1, 1703985, 7, 1835002, 14, 1835003, 2, 1835004, 2, 1835005, 2, 1835006, 2, 1835007, 13, 1769514, 14, 1769515, 2, 1769516, 2, 1769517, 2, 1769518, 2, 1769519, 13, 1900540, 11, 1835052, 11, 1966070, 6, 1900597, 7, 2162680, 6, 2097202, 7, 2359290, 15, 2359291, 0, 2359292, 0, 2359293, 0, 2359294, 0, 2359295, 12, 2293802, 15, 2293803, 0, 2293804, 0, 2293805, 0, 2293806, 0, 2293807, 12, 2424826, 3, 2424827, 4, 2424828, 4, 2424829, 4, 2424830, 4, 2424831, 1, 2359296, 5, 2359299, 5, 2359302, 5, 2359305, 5, 2359308, 5, 2359311, 5, 2359314, 5, 2359317, 5, 2359320, 5, 2359323, 5, 2359326, 5, 2359329, 5, 2359332, 5, 2359335, 5, 2359338, 3, 2359339, 4, 2359340, 4, 2359341, 4, 2359342, 4, 2359343, 1, 2490360, 6, 2490362, 3, 2490363, 4, 2490364, 4, 2490365, 4, 2490366, 4, 2490367, 1, 2424874, 3, 2424875, 4, 2424876, 4, 2424877, 4, 2424878, 4, 2424879, 1, 2555898, 14, 2555899, 2, 2555900, 2, 2555901, 2, 2555902, 2, 2555903, 13, 2490410, 14, 2490411, 2, 2490412, 2, 2490413, 2, 2490414, 2, 2490415, 13, 2490418, 6, 2621430, 6, 2687028, 6, 2818040, 6, 2949115, 6, 2883634, 6, 3080191, 6, 3014673, 10, 3014678, 10, 3014684, 10, 3014702, 6, 3080207, 15, 3080208, 0, 3080209, 0, 3080210, 0, 3080211, 0, 3080212, 0, 3080213, 0, 3080214, 0, 3080215, 0, 3080216, 0, 3080217, 0, 3080218, 0, 3080219, 0, 3080220, 0, 3080221, 0, 3080222, 12, 3145731, 6, 3145735, 6, 3145739, 7, 3145743, 3, 3145744, 4, 3145745, 4, 3145746, 4, 3145747, 4, 3145748, 4, 3145749, 4, 3145750, 4, 3145751, 4, 3145752, 4, 3145753, 4, 3145754, 4, 3145755, 4, 3145756, 4, 3145757, 4, 3145758, 1, 3145761, 7, 3145766, 6, 3145770, 6, 3211279, 3, 3211280, 4, 3211281, 4, 3211282, 4, 3211283, 4, 3211284, 4, 3211285, 4, 3211286, 4, 3211287, 4, 3211288, 4, 3211289, 4, 3211290, 4, 3211291, 4, 3211292, 4, 3211293, 4, 3211294, 1, 3276815, 3, 3276816, 4, 3276817, 4, 3276818, 4, 3276819, 4, 3276820, 4, 3276821, 4, 3276822, 4, 3276823, 4, 3276824, 4, 3276825, 4, 3276826, 4, 3276827, 4, 3276828, 4, 3276829, 4, 3276830, 1, 3342351, 3, 3342352, 4, 3342353, 4, 3342354, 4, 3342355, 4, 3342356, 4, 3342357, 4, 3342358, 4, 3342359, 4, 3342360, 4, 3342361, 4, 3342362, 4, 3342363, 4, 3342364, 4, 3342365, 4, 3342366, 1, 3407887, 3, 3407888, 4, 3407889, 4, 3407890, 4, 3407891, 4, 3407892, 4, 3407893, 4, 3407894, 4, 3407895, 4, 3407896, 4, 3407897, 4, 3407898, 4, 3407899, 4, 3407900, 4, 3407901, 4, 3407902, 1, 3473423, 3, 3473424, 4, 3473425, 4, 3473426, 4, 3473427, 4, 3473428, 4, 3473429, 4, 3473430, 4, 3473431, 4, 3473432, 4, 3473433, 4, 3473434, 4, 3473435, 4, 3473436, 4, 3473437, 4, 3473438, 1, 3538959, 3, 3538960, 4, 3538961, 4, 3538962, 4, 3538963, 4, 3538964, 4, 3538965, 4, 3538966, 4, 3538967, 4, 3538968, 4, 3538969, 4, 3538970, 4, 3538971, 4, 3538972, 4, 3538973, 4, 3538974, 1, 3604495, 3, 3604496, 4, 3604497, 4, 3604498, 4, 3604499, 4, 3604500, 4, 3604501, 4, 3604502, 4, 3604503, 4, 3604504, 4, 3604505, 4, 3604506, 4, 3604507, 4, 3604508, 4, 3604509, 4, 3604510, 1, 3670031, 14, 3670032, 2, 3670033, 2, 3670034, 2, 3670035, 2, 3670036, 2, 3670037, 2, 3670038, 2, 3670039, 2, 3670040, 2, 3670041, 2, 3670042, 2, 3670043, 2, 3670044, 2, 3670045, 2, 3670046, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="KillZones" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="KillZone" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -384, 3360 )

[node name="KillZone3" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -3040, 3360 )

[node name="KillZone1" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 3376, 3365 )

[node name="KillZone2" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 6160, 3360 )

[node name="KillZone4" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 5764.48, 1925.57 )
transform/rot = 90.0

[node name="KillZone5" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 5753.1, -924.31 )
transform/rot = 90.0

[node name="KillZone6" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -2643.11, 1925.57 )
transform/rot = 90.0

[node name="KillZone7" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -2643.11, -924.31 )
transform/rot = 90.0

[node name="Spikes" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 32, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes1" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 96, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes2" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 160, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes3" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 224, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes4" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 288, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes5" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 352, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes6" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 416, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes7" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 480, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes8" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 544, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes9" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 608, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes10" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 672, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes11" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 736, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes12" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 800, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes13" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 864, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes14" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 928, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes15" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 992, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes16" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1056, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes17" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1120, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes18" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1184, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes19" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1248, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes20" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1312, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes21" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1376, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes22" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1440, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes23" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1504, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes24" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1568, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes25" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1632, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes26" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1696, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes27" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1760, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes28" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1824, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes29" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1888, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes30" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 1952, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes31" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2016, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes32" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2080, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes33" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2144, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes34" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2208, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes35" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2272, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes36" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2336, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes37" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2400, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes38" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2464, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes39" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2528, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes40" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2592, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Spikes41" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2656, 1584 )
transform/scale = Vector2( 1, 0.75 )

[node name="Monsters" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="Bobo" parent="Monsters" instance=ExtResource( 6 )]

transform/pos = Vector2( 563.418, 2258.38 )

[node name="Bobo1" parent="Monsters" instance=ExtResource( 6 )]

transform/pos = Vector2( 1594.51, 2260.23 )

[node name="Bobo2" parent="Monsters" instance=ExtResource( 6 )]

transform/pos = Vector2( 2581.59, 2260.33 )

[node name="RocoSteel" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 664.053, 350.33 )

[node name="RocoSteel4" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 32.0643, 352 )

[node name="RocoSteel5" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 34.0137, 928.203 )

[node name="RocoSteel6" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 708.643, 924.102 )

[node name="RocoSteel1" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 1282.02, 350.33 )

[node name="RocoSteel2" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 1843.2, 350.33 )

[node name="RocoSteel3" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 2397.7, 353.67 )

[node name="Gobo" parent="Monsters" instance=ExtResource( 8 )]

transform/pos = Vector2( 2534, 916.555 )

[node name="Roco" parent="Monsters" instance=ExtResource( 9 )]

transform/pos = Vector2( 1323.27, 927.438 )

[node name="Roco1" parent="Monsters" instance=ExtResource( 9 )]

transform/pos = Vector2( 1893.91, 924.114 )

[node name="Coins" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Coin" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1205.19, 2959.21 )

[node name="Coin1" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1352.83, 2961.26 )

[node name="Coin2" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1553.78, 2959.21 )

[node name="Coin3" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1730.13, 2963.31 )

[node name="Coin4" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1892.12, 2959.21 )

[node name="Coin5" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1030.89, 2965.36 )

[node name="Coin6" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 676.145, 2249.72 )

[node name="Coin7" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1668.61, 2262.03 )

[node name="Coin8" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 2369.9, 2251.77 )

[node name="Coin9" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 665.164, 283.519 )

[node name="Coin10" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1280.33, 281.468 )

[node name="Coin11" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1838.08, 279.418 )

[node name="Coin12" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 294.015, 929.441 )

[node name="Coin13" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1633.02, 895.25 )

[node name="Coin14" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 2426.58, 899.351 )

[node name="Coin15" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 2144, 1504 )

[node name="Coin16" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 1312, 1504 )

[node name="Coin17" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 672, 1504 )

[node name="Player" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( -224, 256 )

[node name="Hazzards" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="FireballUp" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 688.08, 2487.57 )

[node name="FireballUp1" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 954.096, 2491.27 )

[node name="FireballUp2" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 1220.58, 2491.27 )

[node name="FireballUp3" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 1464.87, 2491.27 )

[node name="FireballUp4" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 1672.14, 2491.27 )

[node name="FireballUp5" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 1914.57, 2500.52 )

[node name="FireballUp6" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 2131.07, 2500.52 )

[node name="FireballUp7" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 2365.2, 2503.04 )

[node name="FireballUp8" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 419.152, 2485.42 )

[node name="RotatingFire" parent="Hazzards" instance=ExtResource( 13 )]

transform/pos = Vector2( 273.11, 398.054 )

[node name="RotatingFire1" parent="Hazzards" instance=ExtResource( 13 )]

transform/pos = Vector2( 855.324, 394.63 )

[node name="RotatingFire2" parent="Hazzards" instance=ExtResource( 13 )]

transform/pos = Vector2( 1434.11, 394.63 )

[node name="RotatingFire3" parent="Hazzards" instance=ExtResource( 13 )]

transform/pos = Vector2( 1999.2, 394.63 )


